--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </nav>
         </header>
         <main>
+            <img src="./image/F1AB9490-0BDD-469D-8567-06ECB28FFD44.JPG" alt="fond" />
             <section>
                 <h2>Derniers Articles</h2>
                 <p>Les derniers articles seront affichés ici une fois qu'ils seront publiés.</p>
