--- a/html/article2.html
+++ b/html/article2.html
@@ -29,50 +29,44 @@
         </header>
         <main>
             <article>
-                <h2>Microtransactions dans les jeux vidéo : un piège pour les jeunes joueurs ?</h2>
-                <p>Des prodiges trop vite exposés</p>
+                <h2>Les microtransactions dans les jeux vidéo : un sujet controversé</h2>
                 <p>
-                    Le monde de l'eSport regorge de jeunes talents qui explosent aux yeux du monde dès leur plus jeune
-                    âge. Prenons l'exemple de ZEN, un jeune prodige français de Rocket League. À seulement 13 ans, il
-                    intègre l'équipe Vitality, bien qu'il ne soit pas encore en âge de participer aux compétitions
-                    officielles. Son talent est indéniable, et il remporte un Major et la Coupe du Monde en 2023 à l'âge
-                    de 16 ans.
+                    Avez-vous remarqué ces éléments singuliers dans les jeux vidéo ? Il est possible d'acheter de
+                    nouveaux skins pour votre personnage, ou des armes d'une puissance extraordinaire. Ces éléments sont
+                    appelés microtransactions, et ils font l'objet de nombreuses discussions ces derniers temps.
                 </p>
+                <h3>Qu'est-ce que c'est ?</h3>
                 <p>
-                    Cependant, la face cachée de ce succès est souvent ignorée. Le revers de la médaille est cruel :
-                    harcèlement sur les réseaux sociaux, pression intense, et burn-out. ZEN lui-même a craqué en direct
-                    à 17 ans, et ses performances en ont pâti.
+                    En résumé, les microtransactions consistent à payer avec votre argent réel pour acquérir des biens
+                    virtuels dans un jeu vidéo. C'est un peu comme si vous achetiez des bonbons, mais que vous ne
+                    pouviez pas les manger !
                 </p>
-                <p>L'appât du gain et ses dangers</p>
+                <h3>Pourquoi les développeurs le font-ils ?</h3>
                 <p>
-                    Les compétitions eSport peuvent être extrêmement lucratives. En 2019, la Coupe du Monde de Fortnite
-                    a offert 30 millions de dollars de prix, dont 3 millions au vainqueur en solo. De tels chiffres
-                    attirent les jeunes joueurs, qui rêvent de gloire et de fortune.
+                    La raison est simple : pour gagner de l'argent ! Il est vrai que les jeux vidéo coûtent cher à
+                    développer, et les microtransactions permettent de générer des revenus supplémentaires après la
+                    sortie du jeu.
                 </p>
+                <h3>Est-ce une bonne ou une mauvaise chose ?</h3>
                 <p>
-                    Certains sacrifient même leurs études pour se consacrer à l'eSport, attirés par des résultats
-                    prometteurs en tournois ou des offres alléchantes d'équipes peu connues. Mais la réalité est souvent
-                    cruelle. La majorité d'entre eux ne parviennent pas à percer et se retrouvent sans diplôme, ni
-                    perspective d'avenir, après avoir perdu plusieurs années.
+                    La réponse est complexe. D'un côté, les microtransactions peuvent être utiles aux développeurs. De
+                    l'autre, elles peuvent être frustrantes pour les joueurs, surtout lorsqu'elles concernent des
+                    éléments qui ne modifient pas l'essence du jeu.
                 </p>
-                <p>Des étoiles filantes</p>
+                <h3>Y a-t-il des risques ?</h3>
                 <p>
-                    Même les joueurs qui atteignent le sommet ne sont pas à l'abri d'une chute brutale. La performance
-                    peut décliner, la passion s'éteindre, et les stars d'hier se retirent dans l'anonymat. Airwaks,
-                    joueur suisse professionnel sur Fortnite, en est un exemple frappant. Après avoir participé à la
-                    Coupe du Monde 2019, il a disparu de la scène compétitive en 2021-2022.
+                    Oui, quelques-uns. Parfois, les microtransactions peuvent s'apparenter à du jeu d'argent. De plus,
+                    si vous n'êtes pas vigilant, vous pouvez facilement dépenser beaucoup d'argent sans vous en rendre
+                    compte.
                 </p>
-                <p>Un système à repenser</p>
+                <h3>Alors, que penser des microtransactions ?</h3>
                 <p>
-                    L'industrie du jeu vidéo et les organisateurs d'eSport doivent prendre conscience des dangers qui
-                    guettent les jeunes joueurs. Des mesures doivent être prises pour les protéger de l'exploitation et
-                    du revers de la médaille du succès. L'éducation et l'accompagnement sont essentiels pour leur
-                    permettre de naviguer dans cet environnement complexe et exigeant.
+                    Elles ne sont pas nécessairement diaboliques, mais il est important de rester prudent. Il ne faut
+                    pas se laisser influencer par l'idée que "ce n'est que quelques euros", car la facture peut vite
+                    grimper.
                 </p>
-                <p>
-                    L'exemple de ZEN est un avertissement. Il nous rappelle que le talent ne suffit pas, et que la
-                    réussite dans l'eSport ne doit pas se faire au prix du bien-être et de l'avenir des jeunes joueurs.
-                </p>
+                <p>En tout cas, il est essentiel de savoir ce que vous achetez et de réfléchir avant de payer.</p>
+                <h3>Et vous, quelle est votre opinion sur les microtransactions ?</h3>
             </article>
         </main>
         <footer>
